tests/ui/typeck/while-type-error.rs
fn main() { while main { } } //~ ERROR mismatched types
